force-app/main/default/objects/Prize__c/Prize__c.object-meta.xml
<CustomObject>
    <label>Prize</label>
    <nameField>
        <label>Prize Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prizes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>