force-app/main/default/objects/Prize__c/fields/Awarded__c.field-meta.xml
<CustomField>
    <fullName>Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awarded</label>
    <type>Checkbox</type>
</CustomField>