force-app/main/default/objects/Prize__c/fields/Prize_Image__c.field-meta.xml
<CustomField>
    <fullName>Prize_Image__c</fullName>
    <label>Prize Image</label>
    <type>Url</type>
</CustomField>